fix spacing between label, controls, and caption

--- a/packages/components/src/components/segmented-control/segmented-control.scss
+++ b/packages/components/src/components/segmented-control/segmented-control.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    gap: tokens.$ifxSpace150;
 }
 
 .group__label {
@@ -13,7 +12,7 @@
     line-height: tokens.$ifxLineHeightM;
     font-weight: tokens.$ifxFontWeightRegular;
     font-family: tokens.$ifxFontFamilyBody;
-
+    
     &:empty {
         display: none;
     }
@@ -30,6 +29,7 @@
 }
 
 .group__caption {
+    margin-top: tokens.$ifxSpace50;
     display: flex;
     align-items: center;
     gap: tokens.$ifxSpace100;
